2016-04-08  Gerald Pfeifer  <gerald@pfeifer.com>

	* index.html: Replace manual style to establish two columns
	by new global CSS class "twocolumns".

2015-06-27  Gerald Pfeifer  <gerald@pfeifer.com>

	* done.html: www.pdflabs.com now uses https.

2014-07-06  Gerald Pfeifer  <gerald@pfeifer.com>

	* news.html: Avoid link into our SVN repository.  Fix grammar.

2014-07-02  Gerald Pfeifer  <gerald@pfeifer.com>

	* news.html: Make a number of links relative.
	* status.html: Ditto.

	* libgcj-classpath-compare.html: Remove redundant link to gcc.css.
	* gui-compare/libgcj-classpath-compare.html: Ditto.

2014-07-01  Gerald Pfeifer  <gerald@pfeifer.com>

	* .htaccess: Merge java/.htaccess into top level .htaccess 
	and convert links to https.

2014-06-30  Gerald Pfeifer  <gerald@pfeifer.com>

	* build-snapshot.html: Remove.
	* gcj2.html: Remove link to build-snapshot.html and GCC homepage.
	* libgcj2.html: Replace link to build-snapshot.html by our main
	installation instructions.  Omit redundant instructions.

2014-06-29  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* faq.html: Remove two absolute links/references.

2014-06-28  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html: Remove five obsolete entries.

2013-03-31  Gerald Pfeifer  <gerald@pfeifer.com>

	* done.html: Remove broken link to iRATE.
	Adjust link to Swarm.

2012-12-29  Gerald Pfeifer  <gerald@pfeifer.com>

	* news.html: Refer to Jessie without using a link.

2012-12-29  Gerald Pfeifer  <gerald@pfeifer.com>

	* gcj2.html: Remove link to our old CVS page. 

2012-12-21  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html: Remove question about Linker bug on Solaris.

2012-11-11  Gerald Pfeifer  <gerald@pfeifer.com>

	* papers/compiling.html: Transform into XHTML 1.0 Transitional.

2012-11-03  Gerald Pfeifer  <gerald@pfeifer.com>

	* papers/compiling.html: Remove broken heading/navigation.
	Make a huge amount of markup fixes.

2012-11-02  Gerald Pfeifer  <gerald@pfeifer.com>
