@@ -51,6 +51,7 @@ Redirect permanent /java/FAQ.html		https://gcc.gnu.org/java/faq.html
 Redirect permanent /java/gcj.html		https://gcc.gnu.org/java/
 Redirect permanent /java/libgcj.html		https://gcc.gnu.org/java/
 Redirect permanent /java/about.html		https://gcc.gnu.org/about.html
+Redirect permanent /java/status.html		https://gcc.gnu.org/java/
 
 Redirect permanent /bugs.html			https://gcc.gnu.org/bugs/
 Redirect permanent /c9xstatus.html		https://gcc.gnu.org/c99status.html
