@@ -1,154 +1,0 @@
-<html>
-
-<head>
-<title>GCJ - Status</title>
-
-<style type="text/css">
-dt.package { font-weight: bold; font-family: monospace }
-dt.target { font-weight: bold }
-</style>
-
-</head>
-
-<body>
-
-<h1>GCJ Status</h1>
-
-<p>Status of GCJ as of GCC 3.2.  Improvements that are only
-in current development versions are marked as "in CVS".</p>
-
-<h2 id="features">Core Features</h2>
-
-<ul>
-<li>Compile Java source code ("ahead-of-time") to native (machine) code,</li>
-<li>Compile Java bytecode (<code>.class</code> files) to native (machine) code,</li>
-<li>Compile Java source code to <code>.class</code> files (<code>javac</code> replacement).</li>
-<li>A byte-code interpreter, allowing support for <code>ClassLoader</code>s,
-and dynamically loaded classes. Corresponds to JDK's <code>java</code> command.</li>
-<li>Support for JNI, as well as CNI, a more efficient and easier-to-use
-(though non-standard) API for writing Java methods in C++.</li>
-<li> Verification, both at compile time (compiling classes to
-native) and run-time (loading classes).  Both miss some tests, and
-you should not (yet) rely on their correctness for security.</li>
-<li>A "conservative" garbage collector.</li>
-<li>Replacements for the <code>jar</code>, <code>javah</code>,
-<code>rmic</code>, and <code>rmiregistry</code> programs.</li>
-<li>An extensive class library - see below.</li>
-</ul>
-
-
-<h2 id="packages">Implemented Packages</h2>
-
-<dl>
-<dt class="package">java.applet</dt>
-<dd>Believed to be complete, but note that without a functional AWT
-it isn't very useful.</dd>
-<dt class="package">java.awt</dt>
-<dd>A lot of code exists, but not enough for use in real applications.</dd>
-<dt class="package">java.beans</dt>
-<dd>Believed to be functional and complete, should be compatible with JDK 1.4.</dd>
-<dt class="package">java.io</dt>
-<dd>Ok.</dd>
-<dt class="package">java.lang</dt>
-<dd>Ok.</dd>
-<dt class="package">java.lang.ref</dt>
-<dd>Ok.</dd>
-<dt class="package">java.lang.reflect</dt>
-<dd>Ok.  Does not check access permissions.</dd>
-<dt class="package">java.math</dt>
-<dd>Ok.</dd>
-<dt class="package">java.net</dt>
-<dd>Ok.</dd>
-<dt class="package">java.nio</dt>
-<dd>The public interface is ready, but the implementation is not working yet.</dd>
-<dt class="package">java.rmi</dt>
-<dd>Ok.</dd>
-<dt class="package">java.security</dt>
-<dd>Code exist; completeness unknown.</dd>
-<dt class="package">java.sql</dt>
-<dd>Ok, should be compatible with JDK 1.4.</dd>
-<dt class="package">java.util</dt>
-<dd>Ok.</dd>
-<dt class="package">java.util.jar</dt>
-<dd>Ok.</dd>
-<dt class="package">java.util.regex</dt>
-<dd>Ok.</dd>
-<dt class="package">java.util.zip</dt>
-<dd>Ok.</dd>
-<dt class="package">java.text</dt>
-<dd>Ok, but most localization data not available.</dd>
-<dt class="package">javax.accessibility</dt>
-<dd>Some code; status unknown.</dd>
-<dt class="package">javax.crypto</dt>
-<dd>We recommend using <a
-href="http://www.gnu.org/software/gnu-crypto/">GNU Crypto</a>.</dd>
-<dt class="package">javax.naming</dt>
-<dd>Complete, but no providers written.</dd>
-<dt class="package">javax.sql</dt>
-<dd>Some code; status unknown.</dd>
-<dt class="package">javax.swing</dt>
-<dd>Some code, but not enough for real applications.</dd>
-<dt class="package">javax.transaction</dt>
-<dd>Complete, but no providers written.</dd>
-</dl>
-
-<p>You can also see <a
-href="libgcj-classpath-compare.html">a
-comparison of our classes with Classpath's</a>.  Differences here are
-merged from time to time.  You can also see
-<a href="gui-compare/libgcj-classpath-compare.html">
-a comparison of the GUI branch with Classpath</a>.
-</p>
-
-
-<h2 id="targets">Supported Targets</h2>
-
-<dl>
-<dt class="target">GNU/Linux on the Pentium-compatible PCs
-  (<code>i[56]86-pc-linux-gnu</code>)</dt>
-<dd>Ok.</dd>
-<dt class="target">FreeBSD on the Pentium-compatible PCs
-  (<code>i[56]86-pc-freebsd*</code>)</dt>
-<dd>Ok.</dd>
-<dt class="target">GNU/Linux on Alpha
-  (<code>alpha*-*-linux-gnu</code>)</dt>
-<dd>Ok.</dd>
-<dt class="target">GNU/Linux on the Itanium (ia64) architecture
-  (<code>ia64-*-linux-gnu</code>)</dt>
-<dd>Ok.</dd>
-<dt class="target">GNU/Linux on PowerPC</dt>
-<dd>Ok.</dd>
-<dt class="target">GNU/Linux on AMD x86-64 ("Hammer") architecture 
-(<code>x86_64-*-linux-gnu</code>)</dt>
-<dd>Ok, in CVS (but building with multilibs enabled needs libtool patch).</dd>
-<dt class="target">Solaris 2.5.1, 2.6, 2.7, 2.8 on SPARC
-  (<code>sparc*-sun-solaris2.[5678]</code>)</dt>
-<dd>Ok for 32- and 64-bit ABIs.  Byte-code interpreter not currently
-supported.</dd>
-<dt class="target">SGI Irix 6.5 on Mips
-  (<code>mips-sgi-irix6.5</code>)</dt>
-<dd>Some tricks required to build.  Byte-code interpreter not
-currently supported.  No SEGV handler available.</dd>
-<dt class="target">Windows on the Intel PC platform, using the MingW32 compiler
-  (<code>i[56]86-pc-mingw32</code>)</dt>
-<dd>Works for target; works for host (in CVS).  Is incomplete.</dd>
-<dt class="target">PPC Darwin (including MacOS X)</dt>
-<dd>Some kludges needed.</dd>
-<dt class="target">DEC OSF 4.0f and OSF 5.1 on Alpha
-  (<code>alpha-dec-osf4.0f</code>, <code>alpha-dec-osf5.1</code>)</dt>
-<dd>Ok.</dd>
-<dt class="target">Bare metal ARM ELF using newlib
-  (<code>arm-elf</code>)</dt>
-<dd>Ok, in CVS.  No threads, file I/O or networking.</dd>
-<dt class="target">Bare metal XScale ELF using newlib
-  (<code>xscale-elf</code>)</dt>
-<dd>Ok.  No threads, file I/O or networking.</dd>
-<dt class="target">IBM s390x</dt>
-<dd>Ok, in CVS.</dd>
-<dt class="target">GNU/Linux on Hitachi SH-3/4 micro-controller
-  (<code>sh[34]-*-linux</code>)</dt>
-<dd>Ok, in CVS.</dd>
-</dl>
-
-</body>
-</html>
