@@ -124,7 +124,6 @@
     <p>
     <a href="index.html">GCJ Home</a><br />
     <a href="../">GCC Home</a><br />
-    <a href="status.html">Status</a><br />
     <a href="faq.html">FAQ</a><br />
     <a href="docs.html">Documentation</a><br />
     <a href="contrib.html">Contributing</a><br />
