@@ -1,3 +1,7 @@
+2016-04-17  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* status.html: Remove.
+
 2016-04-08  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* index.html: Replace manual style to establish two columns
